@@ -1,6 +1,7 @@
 0.04
 - Documentation update.
 - Add set_split_params() subroutine.
+- Add split_params() subroutine.
 
 0.03 (July 15, 2012)
 - Update build system.
